feat: added new CRM page and updated coffee shop page content

--- a/cafeteria/index.html
+++ b/cafeteria/index.html
@@ -29,53 +29,14 @@
             <br> <!-- Quebra de linha -->
             <h4>Implementando um Semáforo com Arduino</h4> <!-- Título do primeiro projeto -->
             <p>Este código controla um semáforo usando um Arduino. ...</p> <!-- Descrição do primeiro projeto -->
-            <video src="videos/semaforo.mp4" controls class="videos">Semaforo</video> <!-- Vídeo do primeiro projeto -->
-            <hr> <!-- Linha horizontal -->
+            <video src="videos/cafeteria.mp4" controls class="videos">Semaforo</video> <!-- Vídeo do primeiro projeto -->
             <br> <!-- Quebra de linha -->
-            <h4>Implementando um Semáforo com pedestres em Arduino</h4> <!-- Título do segundo projeto -->
-            <p>Este código controla um semáforo para carros e um semáforo para pedestres usando um Arduino. ...</p> <!-- Descrição do segundo projeto -->
-            <video src="videos/semaforo_pedestre.mp4" controls class="videos"></video> <!-- Vídeo do segundo projeto -->
-            <hr> <!-- Linha horizontal -->
-            <br> <!-- Quebra de linha -->
-            <h4>Acendendo um Led com clique do botão</h4> <!-- Título do terceiro projeto -->
-            <p>Este código controla um LED usando um botão com um Arduino. ...</p> <!-- Descrição do terceiro projeto -->
-            <video src="videos/clique_botao.mp4" controls class="videos"></video> <!-- Vídeo do terceiro projeto -->
-            <hr> <!-- Linha horizontal -->
-            <br> <!-- Quebra de linha -->
-            <h4>Contador que vai do zero ao nove e depois do nove ao zero com um clique do botão.</h4> <!-- Título do quarto projeto -->
-            <p>Este código controla um display de 7 segmentos e um botão usando um Arduino. ...</p> <!-- Descrição do quarto projeto -->
-            <video src="videos/contador.mp4" controls class="videos"></video> <!-- Vídeo do quarto projeto -->
-            <hr> <!-- Linha horizontal -->
-            <br> <!-- Quebra de linha -->
-            <h4>Contador crescente que vai do zero ao nove com um clique do botão.</h4> <!-- Título do quinto projeto -->
-            <p>Este código controla um display de 7 segmentos e um botão usando um Arduino. ...</p> <!-- Descrição do quinto projeto -->
-            <video src="videos/contador_crescente.mp4" controls class="videos"></video> <!-- Vídeo do quinto projeto -->
-            <hr> <!-- Linha horizontal -->
-            <br> <!-- Quebra de linha -->
-            <h4>Contador decrescente que vai do nove ao zero com um clique do botão.</h4> <!-- Título do sexto projeto -->
-            <p>Este código controla um display de 7 segmentos e um botão usando um Arduino. ...</p> <!-- Descrição do sexto projeto -->
-            <video src="videos/contador_decrescente.mp4" controls class="videos"></video> <!-- Vídeo do sexto projeto -->
-            <hr> <!-- Linha horizontal -->
-            <br> <!-- Quebra de linha -->
-            <h4>Implementando Monitor Serial para ligar os leds</h4> <!-- Título do sétimo projeto -->
-            <p>Este código para Arduino controla LEDs conectados aos pinos de 2 a 7. ...</p> <!-- Descrição do sétimo projeto -->
-            <video src="videos/monitor_serial.mp4" controls class="videos"></video> <!-- Vídeo do sétimo projeto -->
-            <hr> <!-- Linha horizontal -->
-            <br> <!-- Quebra de linha -->
-            <h4>Circuito em arduino com RGB e Buzzer</h4> <!-- Título do oitavo projeto -->
-            <p>Este código para Arduino utiliza um sensor de luz para identificar cores e controla LEDs RGB e um buzzer. ...</p> <!-- Descrição do oitavo projeto -->
-            <video src="videos/rgb.mp4" controls class="videos"></video> <!-- Vídeo do oitavo projeto -->
-            <hr> <!-- Linha horizontal -->
-            <br> <!-- Quebra de linha -->
-            <h4>LCD com ESP32</h4> <!-- Título do nono projeto -->
-            <p>Esse programa para Arduino usa um display LCD para mostrar a hora atual, sincronizada através de uma conexão WiFi com um servidor de tempo na internet. ...</p> <!-- Descrição do nono projeto -->
-            <video src="videos/esp32.mp4" controls class="videos"></video> <!-- Vídeo do nono projeto -->
             
         </div>
     </section>
 
     <section class="textos">
-        <h3>Para mais projetos acesse meu <a href="https://github.com/Anhaia09/Automacao_Industrial" target="_blank">GitHub <i class="bx bxl-github"></i></a></h3> <!-- Link para o GitHub -->
+        <h3>Veja o código aqui <a href="https://github.com/Anhaia09/Automacao_Industrial" target="_blank">GitHub <i class="bx bxl-github"></i></a></h3> <!-- Link para o GitHub -->
     </section>
 
 
