feat: including presentation videos for each project on their respective pages

--- a/devBurguer/index.html
+++ b/devBurguer/index.html
@@ -30,81 +30,8 @@
             <hr> <!-- Linha horizontal -->
             <br> <!-- Quebra de linha -->
 
-            <h4>Amostragem</h4> <!-- Subtítulo -->
-            <p>seleção de um subconjunto ou amostra estatística de indivíduos de uma população estatística 
-                para estimar as características de toda a população.</p> <!-- Parágrafo sobre amostragem -->
-            <div class="imagens">
-                <img src="imagens/amostragem.jpg" alt="piramide"> <!-- Imagem ilustrativa com descrição -->
-                <br> <!-- Quebra de linha -->
-            </div>
-            <hr> <!-- Linha horizontal -->
-            <br> <!-- Quebra de linha -->
-
-            <h4>Escalas de medição</h4> <!-- Subtítulo -->
-            <p>permite atribuir valores numéricos a objetos, eventos ou fenômenos, de forma a facilitar a 
-                compreensão e a análise dos mesmos.</p> <!-- Parágrafo sobre escalas de medição -->
-            <p>● Escala Nominal: Considerada a mais simples das 4 escalas, ela é usada para rotular variáveis 
-                em classificações distintas e não envolve um valor <br>quantitativo e nem uma ordem.</p> <!-- Parágrafo sobre escala nominal -->
-            <p>● Escala Ordinal: serve para, além de nomear, identificar / categorizar,  com base em um
-                 processo de comparação.</p> <!-- Parágrafo sobre escala ordinal -->
-            <p>● Escala Intervalar: é aquela em que os intervalos entre os números nos dizem a posição. 
-                Ou que mostra o quanto determinadas coisas <br> (pessoas, características, situações etc) estão 
-                distantes entre si em relação a determinada característica.</p> <!-- Parágrafo sobre escala intervalar -->
-            <p>● Escala de Razão: tem todas as características de uma escala de intervalo, mas ela também pode 
-                acomodar o valor de “zero” como absoluto <br>— ou seja, não há valor numérico negativo.</p> <!-- Parágrafo sobre escala de razão -->
-            <div class="imagens">
-                <img src="imagens/escala.png" alt="diagrama"> <!-- Imagem ilustrativa com descrição -->
-            </div>
-            <hr> <!-- Linha horizontal -->
-            <br> <!-- Quebra de linha -->
-
-            <h4>Tendências Centrais</h4> <!-- Subtítulo -->
-            <p>As tendências centrais são utilizadas para representar um conjunto de dados com um único valor.</p> <!-- Parágrafo sobre tendências centrais -->
-            <br> <!-- Quebra de linha -->
-
-            <p> ● Moda: dado com maior frequência absoluta.</p> <!-- Item da lista de tendências centrais -->
-            <div class="imagens">
-                <img src="imagens/moda.png" alt="moda"> <!-- Imagem ilustrativa com descrição -->
-            </div>
-            <br> <!-- Quebra de linha -->
-
-            <p> ● Mediana: valor que ocupa a posição central dos valores quando organizamos esses dados em ordem.</p> <!-- Item da lista de tendências centrais -->
-            <div class="imagens">
-                <img src="imagens/mediana.jpg" alt="mediana"> <!-- Imagem ilustrativa com descrição -->
-            </div>
-            <br> <!-- Quebra de linha -->
-
-            <p> ● Média Aritmética: calculada pela soma de todos os elementos do conjunto dividida pela quantidade de elementos 
-                do conjunto.</p> <!-- Item da lista de tendências centrais -->
-            <div class="imagens">
-                <img src="imagens/aritmetica_simples.png" alt="aritmetica"> <!-- Imagem ilustrativa com descrição -->
-            </div>
-            <br> <!-- Quebra de linha -->
-
-            <p> ● Média Aritmética Ponderada: são atribuídos pesos para cada um dos valores. Quanto maior for o peso, maior será 
-                a influência daquele determinado dado no <br> valor da média aritmética ponderada.</p> <!-- Item da lista de tendências centrais -->
-            <div class="imagens">
-                <img src="imagens/aritmetica_ponderada.png" alt="ponderada"> <!-- Imagem ilustrativa com descrição -->
-            </div>
-            <br> <!-- Quebra de linha -->
-
-            <p> ● Percentil:  são medidas que dividem a amostra (por ordem crescente dos dados) em 100 partes, cada uma com uma 
-                porcentagem de dados aproximadamente igual.</p> <!-- Item da lista de tendências centrais -->
-            <div class="imagens">
-                <img src="imagens/percentil.png" alt="percentil"> <!-- Imagem ilustrativa com descrição -->
-            </div>
-            <br> <!-- Quebra de linha -->
-
-            <p> ● Quartil: O quartil possui a mesma sistemática que o percentil com a diferença de que serão utilizados 3 valores que
-                 dividem o conjunto em 4 partes iguais, ou seja, o mesmo que os percentils 25%, 50% e 75%.</p> <!-- Item da lista de tendências centrais -->
-            <div class="imagens">
-                <img src="imagens/quartil.png" alt="quartil"> <!-- Imagem ilustrativa com descrição -->
-            </div>
-            <br> <!-- Quebra de linha -->
-
-            <p>Exemplo realizado com Mediana: </p> <!-- Descrição do exemplo -->
-            <div class="imagens">
-                <img src="imagens/exemplo.png" alt="exemplo"> <!-- Imagem ilustrativa do exemplo -->
+            <div>
+                <video src="videos/devBurguer.mp4" controls class="videos"></video>
             </div>
             
         </div>
