feat: added new project "Finance App"

--- a/index.html
+++ b/index.html
@@ -209,9 +209,28 @@
                     <h3 class="projeto-titulo">Sistema CRM</h3>
                     <p class="projeto-descricao">Site institucional para salão de beleza com galeria e agendamento.</p>
                     <div class="projeto-tecnologias">
-                        <span class="tecnologia-item">HTML5</span>
-                        <span class="tecnologia-item">CSS3</span>
-                        <span class="tecnologia-item">JavaScript</span>
+                        <span class="tecnologia-item">React</span>
+                        <span class="tecnologia-item">Tailwindcss</span>
+                        <span class="tecnologia-item">Next.js</span>
+                        <span class="tecnologia-item">Python</span>
+                    </div>
+                </div>
+            </article>
+
+            <!-- Projeto 7 - mobile -->
+            <article class="projeto-card">
+                <div class="projeto-imagem-container">
+                    <img src="imagens/mobile.jpg" alt="Projeto Salão de Beleza" class="projeto-imagem">
+                    <div class="projeto-overlay">
+                        <a href="mobile/index.html" class="projeto-link">Ver Projeto</a>
+                    </div>
+                </div>
+                <div class="projeto-info">
+                    <h3 class="projeto-titulo">App Finanças</h3>
+                    <p class="projeto-descricao">Site institucional para salão de beleza com galeria e agendamento.</p>
+                    <div class="projeto-tecnologias">
+                        <span class="tecnologia-item">React Native</span>
+                        <span class="tecnologia-item">TypeScript</span>
                     </div>
                 </div>
             </article>
