feat: structured and styled the page

--- a/cafeteria/index.html
+++ b/cafeteria/index.html
@@ -1,50 +1,60 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8"> <!-- Define o conjunto de caracteres como UTF-8 -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Define a escala inicial e largura do viewport para dispositivos móveis -->
-    <title>Automacao Industrial</title> <!-- Título da página -->
-    <link rel="stylesheet" href="style.css"> <!-- Link para o arquivo de estilo CSS -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Landing Page Cafeteria</title>
+    <link rel="stylesheet" href="style.css">
 
-    <!-- Link box icons -->
-    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css"> <!-- Link para os ícones do BoxIcons -->
+    <!-- Box icons -->
+    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 
-    <!-- Link Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com"> <!-- Pré-conexão com o Google Fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!-- Pré-conexão com o servidor de fontes do Google, com cross-origin -->
-    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"> <!-- Importa as fontes Caveat e Jost do Google Fonts -->
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <div class="nav-right">
-            <a href="../index.html" class="nav-btn">Voltar</a> <!-- Link para voltar à página inicial -->
-            <div class="bx bx-menu" id="menu-icone"></div> <!-- Ícone de menu (não implementado no código fornecido) -->
+            <a href="../index.html" class="nav-btn">Voltar</a>
         </div>
     </header>
 
-    <section class="texto">
-        <div class="textos">
-            <h1><span>Automação </span>Industrial</h1> <!-- Título principal da seção -->
-            <hr> <!-- Linha horizontal -->
-            <br> <!-- Quebra de linha -->
-            <h4>Implementando um Semáforo com Arduino</h4> <!-- Título do primeiro projeto -->
-            <p>Este código controla um semáforo usando um Arduino. ...</p> <!-- Descrição do primeiro projeto -->
-            <video src="videos/cafeteria.mp4" controls class="videos">Semaforo</video> <!-- Vídeo do primeiro projeto -->
-            <br> <!-- Quebra de linha -->
-            
-        </div>
-    </section>
+    <main>
+        <section class="texto">
+            <div class="textos">
+                <h1><span>Landing Page </span>Cafeteria ☕</h1>
+                <hr>
+                <br>
+                <p>
+                    Este projeto é uma landing page desenvolvida para uma cafeteria, com um design moderno e convidativo para atrair clientes.<br><br>
+                    O objetivo principal foi aprimorar minhas habilidades em desenvolvimento web, explorando HTML, CSS e JavaScript.<br><br>
+                    🌟 <strong>Destaques do projeto:</strong><br><br>
+                    - Visual inspirado em cafeterias contemporâneas, criando uma experiência acolhedora.<br>
+                    - Funcionalidade interativa em JavaScript: exibição dinâmica do endereço, tornando a navegação mais intuitiva.<br><br>
+                    Este projeto me permitiu reforçar conceitos essenciais de front-end enquanto criava uma interface agradável e funcional.
+                </p>
 
-    <section class="textos">
-        <h3>Veja o código aqui <a href="https://github.com/Anhaia09/Automacao_Industrial" target="_blank">GitHub <i class="bx bxl-github"></i></a></h3> <!-- Link para o GitHub -->
-    </section>
+                <video src="videos/cafeteria.mp4" controls class="videos" alt="Demonstração da Landing Page da Cafeteria">Cafeteria</video>
+                <br>
+            </div>
+        </section>
 
+        <section class="botoes">
+            <a href="https://github.com/Anhaia09/Cafeteria.git" target="_blank" class="botao">
+                Acessar repositório
+            </a>
+            <a href="https://cafeteria-one-pink.vercel.app/" target="_blank" class="botao">
+                Acessar projeto
+            </a>
+        </section>
+    </main>
 
     <footer class="rodape">
-        <h5>@Letícia Anhaia</h5> <!-- Rodapé com o nome do autor -->
+        <h5>@Letícia Anhaia</h5>
     </footer>
 
-    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script> <!-- Script do Typed.js -->
-    <script src="script.js"></script> <!-- Script JavaScript personalizado -->
+    <script src="script.js"></script>
 </body>
 </html>
