feat: structured and styled the page

--- a/crm/index.html
+++ b/crm/index.html
@@ -1,49 +1,52 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8"> <!-- Define o conjunto de caracteres UTF-8 -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Configura a viewport para dispositivos móveis -->
-    <title>Banco de Dados</title> <!-- Título da página exibido na aba do navegador -->
-    <link rel="stylesheet" href="style.css"> <!-- Link para o arquivo de estilos CSS local -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Landing Page Cafeteria</title>
+    <link rel="stylesheet" href="style.css">
 
-    <!-- Link para os ícones da BoxIcons -->
+    <!-- Box icons -->
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 
-    <!-- Links para as fontes do Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com"> <!-- Pré-conexão para o Google Fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!-- Pré-conexão para o Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"> <!-- Importa as fontes Caveat e Jost do Google Fonts -->
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <div class="nav-right">
-            <a href="../index.html" class="nav-btn">Voltar</a> <!-- Botão para voltar à página inicial -->
-            <div class="bx bx-menu" id="menu-icon"></div> <!-- Ícone de menu -->
+            <a href="../index.html" class="nav-btn">Voltar</a>
         </div>
     </header>
 
-    <section class="texto">
-        <div class="textos">
-            <h1><span>Banco de </span>Dados</h1> <!-- Título principal com uma palavra destacada -->
-            <p>Um banco de dados é uma coleção organizada de informações - ou dados - estruturadas, normalmente armazenadas eletronicamente <br> em um sistema de computador. Um banco de dados é geralmente controlado por um sistema de gerenciamento de banco de dados (DBMS).</p> <!-- Parágrafo introdutório -->
-            <hr> <!-- Linha horizontal -->
-            <div>
-                <video src="videos/crm.mp4" controls class="videos"></video>
-            </div>
-            <br> <!-- Quebra de linha -->
-        </div> <!-- Fim da div com classe "textos" -->
-    </section> <!-- Fim da seção com classe "texto" -->
+    <main>
+        <section class="texto">
+            <div class="textos">
+                <h1><span> CRM para Gerenciamento de  </span>Placas Solares 🖥️ (em desenvolvimento)</h1>
+                <hr>
+                <br>
+                <p>
+                    Este projeto em desenvolvimento é um sistema CRM voltado para o gerenciamento e intermediação da instalação de placas solares. A plataforma conecta clientes, prestadores de serviço e administradores (fornecedores), garantindo um fluxo eficiente desde a solicitação de orçamento até a assinatura do contrato.<br><br>
+                    🌟 <strong>Destaques do projeto:</strong><br><br>
+                    - Clientes: Podem se cadastrar, solicitar um orçamento e acompanhar o andamento do serviço.<br>
+                    -  Prestadores de Serviço: Definem os estados onde atuam, cadastrando seus valores e recebendo solicitações de clientes.<br>
+                    - Administradores: Têm visão completa do sistema, fazem a ponte entre clientes e prestadores, gerenciam as demandas e realizam a assinatura do documento.<br><br>
+                    Com essa solução, buscamos otimizar o processo de instalação de placas solares, tornando a comunicação mais ágil e eficiente para todas as partes envolvidas. <br>
+                </p>
 
-    <section class="textos">
-        <h3>Para mais projetos acesse meu <a href="https://github.com/Anhaia09/Banco_de_Dados" target="_blank">GitHub <i class="bx bxl-github"></i></a></h3> <!-- Link para o GitHub da autora -->
-    </section> <!-- Fim da seção com classe "textos" -->
+                <video src="videos/crm.mp4" controls class="videos" alt="Demonstração da Landing Page da Cafeteria">Cafeteria</video>
+                <br>
+            </div>
+        </section>
+
+    </main>
 
     <footer class="rodape">
-        <h5>@Letícia Anhaia</h5> <!-- Texto de rodapé com o nome da autora -->
-    </footer> <!-- Fim do rodapé -->
+        <h5>@Letícia Anhaia</h5>
+    </footer>
 
-    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script> <!-- Link para a biblioteca Typed.js -->
-    <script src="script.js"></script> <!-- Link para o arquivo de script JavaScript -->
+    <script src="script.js"></script>
 </body>
 </html>
-
