feat: structured the page and styled

--- a/devBurguer/index.html
+++ b/devBurguer/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8"> <!-- Define o conjunto de caracteres como UTF-8 -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Configura a viewport para dispositivos móveis -->
-    <title>Banco de Dados</title> <!-- Título da página -->
-    <link rel="stylesheet" href="style.css"> <!-- Link para o arquivo de estilo CSS local -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Landing Page Cafeteria</title>
+    <link rel="stylesheet" href="style.css">
 
-    <!-- Link para os ícones do Boxicons -->
+    <!-- Box icons -->
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 
-    <!-- Link para as fontes do Google Fonts -->
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -17,36 +17,38 @@
 <body>
     <header>
         <div class="nav-right">
-            <a href="../index.html" class="nav-btn">Voltar</a> <!-- Link de navegação para voltar à página inicial -->
-            <div class="bx bx-menu" id="menu-icon"></div> <!-- Ícone do menu -->
+            <a href="../index.html" class="nav-btn">Voltar</a>
         </div>
     </header>
 
-    <section class="texto">
-        <div class="textos">
-            <h1><span>Ciência de </span>Dados</h1> <!-- Título principal da seção com span estilizado -->
-            <p>permite atribuir valores numéricos a objetos, eventos ou fenômenos, de forma a facilitar 
-                a compreensão e a análise dos mesmos.</p> <!-- Parágrafo de texto explicativo -->
-            <hr> <!-- Linha horizontal -->
-            <br> <!-- Quebra de linha -->
+    <main>
+        <section class="texto">
+            <div class="textos">
+                <h1><span>Cardápio </span>Online 🍔🥤</h1>
+                <hr>
+                <br>
+                <p>
+                    Este projeto é um sistema de cardápio digital interativo, que permite aos clientes visualizar os produtos disponíveis, adicionar itens ao carrinho e finalizar o pedido de forma rápida e prática. Com uma interface intuitiva e responsiva, ele facilita a navegação e melhora a experiência do usuário.<br><br>
+                    🌟 <strong>Destaques do projeto:</strong><br><br>
+                    - Exibição dos produtos disponíveis.<br>
+                    - Adição e remoção de itens do carrinho.<br>
+                    - Visualização detalhada do carrinho de compras.<br>
+                    - Cadastro e verificação de endereço de entrega.<br>
+                    - Validação do horário de funcionamento do restaurante.<br>
+                    - Envio do pedido diretamente para o WhatsApp.<br><br>
+                    Esse sistema torna o processo de pedido mais dinâmico e eficiente, otimizando o atendimento e melhorando a experiência dos clientes
+                </p>
 
-            <div>
-                <video src="videos/devBurguer.mp4" controls class="videos"></video>
+                <video src="videos/devBurguer.mp4" controls class="videos" alt="Demonstração do cardapio digital">Cardapio</video>
+                <br>
             </div>
-            
-        </div>
-    </section>
-    
-    <section class="textos">
-        <h3>Para mais exemplos acesse meu <a href="https://colab.research.google.com/drive/1v26WVaVPzzUHlzArF0V78xcjULUVCUaa#scrollTo=iILXXlAdotNM" target="_blank">Colab</a></h3> <!-- Link para um Colab com exemplos -->
-    </section>
+        </section>
+    </main>
 
     <footer class="rodape">
-        <h5>@Letícia Anhaia</h5> <!-- Rodapé com nome do autor -->
+        <h5>@Letícia Anhaia</h5>
     </footer>
 
-    <!-- Scripts -->
-    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script> <!-- Script para efeitos de texto digitado -->
-    <script src="script.js"></script> <!-- Arquivo JavaScript local -->
+    <script src="script.js"></script>
 </body>
 </html>
