fix: fixed video alt text on CRM page

--- a/crm/index.html
+++ b/crm/index.html
@@ -36,7 +36,7 @@
                     Com essa solução, buscamos otimizar o processo de instalação de placas solares, tornando a comunicação mais ágil e eficiente para todas as partes envolvidas. <br>
                 </p>
 
-                <video src="videos/crm.mp4" controls class="videos" alt="Demonstração da Landing Page da Cafeteria">Cafeteria</video>
+                <video src="videos/crm.mp4" controls class="videos" alt="Demonstração do sistema CRM">CRM</video>
                 <br>
             </div>
         </section>
