feat: structured the page and styled

--- a/iot/index.html
+++ b/iot/index.html
@@ -1,50 +1,52 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8"> <!-- Define o conjunto de caracteres como UTF-8 -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Define a escala inicial e largura do viewport para dispositivos móveis -->
-    <title>Automacao Industrial</title> <!-- Título da página -->
-    <link rel="stylesheet" href="style.css"> <!-- Link para o arquivo de estilo CSS -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Irrigação Inteligente</title>
+    <link rel="stylesheet" href="style.css">
 
-    <!-- Link box icons -->
-    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css"> <!-- Link para os ícones do BoxIcons -->
+    <!-- Box icons -->
+    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 
-    <!-- Link Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com"> <!-- Pré-conexão com o Google Fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!-- Pré-conexão com o servidor de fontes do Google, com cross-origin -->
-    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"> <!-- Importa as fontes Caveat e Jost do Google Fonts -->
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <div class="nav-right">
-            <a href="../index.html" class="nav-btn">Voltar</a> <!-- Link para voltar à página inicial -->
-            <div class="bx bx-menu" id="menu-icone"></div> <!-- Ícone de menu (não implementado no código fornecido) -->
+            <a href="../index.html" class="nav-btn">Voltar</a>
         </div>
     </header>
 
-    <section class="texto">
-        <div class="textos">
-            <h1><span>Automação </span>Industrial</h1> <!-- Título principal da seção -->
-            <hr> <!-- Linha horizontal -->
-            <br> <!-- Quebra de linha -->
-            <h4>Implementando um Semáforo com Arduino</h4> <!-- Título do primeiro projeto -->
-            <p>Este código controla um semáforo usando um Arduino. ...</p> <!-- Descrição do primeiro projeto -->
-            <video src="videos/iot.mp4" controls class="videos">Semaforo</video> <!-- Vídeo do primeiro projeto -->
-            <br> <!-- Quebra de linha -->
-            
-        </div>
-    </section>
+    <main>
+        <section class="texto">
+            <div class="textos">
+                <h1><span>Sistema de Irrigação </span>Inteligente 🌱</h1>
+                <hr>
+                <br>
+                <p>
+                    Este projeto foi desenvolvido em parceria com um grupo de mecatrônica para criar um sistema completo de irrigação inteligente. A aplicação foi projetada para analisar, armazenar e exibir dados de forma clara e objetiva, garantindo um monitoramento eficiente da umidade do solo e do funcionamento das bombas de irrigação.<br><br>
+                    🌟 <strong>Destaques do projeto:</strong><br><br>
+                    - Visualização clara dos dados coletados.<br>
+                    - Monitoramento em tempo real da plantação.<br>
+                    - Identificação rápida de problemas e irregularidades.<br>
+                    - Cadastro e gerenciamento de usuários e dispositivos.<br><br>
+                    Com essa solução, garantimos um controle mais preciso da irrigação, otimizando o uso da água e facilitando a análise de dados para tomadas de decisão mais assertivas.
+                </p>
 
-    <section class="textos">
-        <h3>Veja o código aqui <a href="https://github.com/Anhaia09/Automacao_Industrial" target="_blank">GitHub <i class="bx bxl-github"></i></a></h3> <!-- Link para o GitHub -->
-    </section>
-
+                <video src="videos/iot.mp4" controls class="videos" alt="Demonstração do sistema iot">Iot</video>
+                <br>
+            </div>
+        </section>
+    </main>
 
     <footer class="rodape">
-        <h5>@Letícia Anhaia</h5> <!-- Rodapé com o nome do autor -->
+        <h5>@Letícia Anhaia</h5>
     </footer>
 
-    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script> <!-- Script do Typed.js -->
-    <script src="script.js"></script> <!-- Script JavaScript personalizado -->
+    <script src="script.js"></script>
 </body>
 </html>
