feat: structured the page, styled it and added a video of the project

--- a/mobile/index.html
+++ b/mobile/index.html
@@ -1,61 +1,55 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <!-- Definição da codificação de caracteres -->
     <meta charset="UTF-8">
-    <!-- Meta tag para responsividade em dispositivos móveis -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Título da página exibido na aba do navegador -->
-    <title>Desenvolvimento Web</title>
-    <!-- Link para o arquivo de estilos CSS -->
+    <title>Portfólio | Letícia Anhaia - Desenvolvedora Front-end</title>
     <link rel="stylesheet" href="style.css">
-
-    <!-- Link para os ícones da Boxicons -->
+    <!-- Box icons -->
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
-
-    <!-- Link para as fontes do Google Fonts utilizadas -->
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Cabeçalho da página -->
     <header>
-        <!-- Navegação à direita com botão "Voltar" e ícone de menu -->
         <div class="nav-right">
             <a href="../index.html" class="nav-btn">Voltar</a>
-            <div class="bx bx-menu" id="menu-icon"></div>
         </div>
     </header>
 
-    <!-- Seção principal de texto -->
-    <section class="texto">
-        <!-- Container para os textos -->
-        <div class="textos">
-            <!-- Título principal da página -->
-            <h1><span>Desenvolvimento</span> Web</h1>
-            <!-- Introdução sobre os projetos desenvolvidos -->
-            <p>Mostrarei aqui alguns projetos desenvolvidos com HTML, CSS e JavaScript, trabalhados ao longo do semestre.</p>
-            <br>
-            <hr>
-            <br>
-            <!-- Seção sobre HTML/HTML5 -->
-            <video src="videos/mobile.mp4" controls class="videos"></video> 
-        </div>
-    </section>
+    <main>
+        <section class="texto">
+            <div class="textos">
+                <h1><span>App de Controle</span> Financeiro 💰</h1>
+                <hr>
+                <br>
+                <p>
+                    Este projeto foi desenvolvido para ajudar as pessoas a gerenciar seu dinheiro de forma simples e eficiente. Com uma interface intuitiva, o usuário pode cadastrar seu saldo inicial, adicionar despesas e acompanhar seu histórico financeiro em tempo real.<br><br>
+                    🌟 <strong>Destaques do projeto:</strong><br><br>
+                    - Cadastro de saldo inicial.<br>
+                    - Registro de despesas, com débito automático no saldo.<br>
+                    - Histórico detalhado de todas as transações.<br>
+                    - Opção para excluir despesas quando necessário.<br><br>
+                    Com esse app, fica mais fácil ter controle sobre os gastos e manter as finanças organizadas no dia a dia!.
+                </p> <br><br>
 
-    <!-- Seção de links para mais projetos -->
-    <section class="textos">
-        <h3>Para mais projetos acesse meu <a href="https://github.com/Anhaia09/Desenvolvimento_Web" target="_blank">GitHub <i class="bx bxl-github"></i></a></h3>
-    </section>
+                <div class="video-container">
+                    <div class="phone-mockup">
+                        <div class="phone-notch"></div>
+                        <video src="videos/mobile.mp4" controls class="videos" alt="Demonstração mobile"></video>
+                    </div>
+                </div>
+                <br>
+            </div>
+        </section>
+    </main>
 
-    <!-- Rodapé da página -->
     <footer class="rodape">
         <h5>@Letícia Anhaia</h5>
     </footer>
 
-    <!-- Scripts JavaScript -->
-    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
