--- a/salao/index.html
+++ b/salao/index.html
@@ -1,121 +1,51 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <!-- Definição da codificação de caracteres -->
     <meta charset="UTF-8">
-    <!-- Meta tag para responsividade em dispositivos móveis -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Título da página exibido na aba do navegador -->
-    <title>Desenvolvimento Web</title>
-    <!-- Link para o arquivo de estilos CSS -->
+    <title>Portfólio | Letícia Anhaia - Desenvolvedora Front-end</title>
     <link rel="stylesheet" href="style.css">
 
-    <!-- Link para os ícones da Boxicons -->
+    <!-- Box icons -->
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 
-    <!-- Link para as fontes do Google Fonts utilizadas -->
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Cabeçalho da página -->
     <header>
-        <!-- Navegação à direita com botão "Voltar" e ícone de menu -->
         <div class="nav-right">
             <a href="../index.html" class="nav-btn">Voltar</a>
-            <div class="bx bx-menu" id="menu-icon"></div>
         </div>
     </header>
 
-    <!-- Seção principal de texto -->
-    <section class="texto">
-        <!-- Container para os textos -->
-        <div class="textos">
-            <!-- Título principal da página -->
-            <h1><span>Desenvolvimento</span> Web</h1>
-            <!-- Introdução sobre os projetos desenvolvidos -->
-            <p>Mostrarei aqui alguns projetos desenvolvidos com HTML, CSS e JavaScript, trabalhados ao longo do semestre.</p>
-            <br>
-            <hr>
-            <br>
-            <!-- Seção sobre HTML/HTML5 -->
-            <h4>O que é HTML/HTML5?</h4>
-            <p>
-                HTML (HyperText Markup Language) é a linguagem usada para criar e estruturar páginas web, utilizando tags para definir elementos como textos, imagens, links e tabelas.<br>
-                HTML5 facilita a criação de páginas web modernas, interativas e acessíveis.
-            </p>
-            <hr>
-            <br>
-            <!-- Seção sobre CSS -->
-            <h4>O que é CSS?</h4>
-            <p>
-                Com o CSS, é possível controlar a aparência de elementos, como cores, fontes, espaçamento e layout, separando o conteúdo (HTML) da apresentação. <br>
-                Isso facilita a manutenção e a consistência visual das páginas web, permitindo aplicar estilos de forma eficiente a múltiplas páginas ao mesmo tempo.
-            </p>
-            <hr>
-            <br>
-            <!-- Seção sobre JavaScript -->
-            <h4>O que é JavaScript?</h4>
-            <p>
-                Diferente de HTML e CSS, que estruturam e estilizam o conteúdo, respectivamente, JavaScript permite criar funcionalidades avançadas, como validação de formulários, animações, manipulação de elementos da página em tempo real. É essencial para o desenvolvimento de aplicações web modernas, tornando as páginas mais responsivas e interativas para os usuários.
-            </p>
-            <hr>
-            <br>
-            <!-- Seção sobre atividades realizadas -->
-            <h4>ATIVIDADES REALIZADAS AO LONGO DO SEMESTRE</h4>
+    <main>
+        <section class="texto">
+            <div class="textos">
+                <h1><span>Landing Page </span>Salão de Beleza 💅</h1>
+                <hr>
+                <br>
+                <p>
+                    O objetivo desse projeto foi aprimorar meus conhecimentos em desenvolvimento web e design, explorando técnicas de layout, responsividade e interatividade. Cada detalhe foi pensado para oferecer uma experiência agradável e envolvente para o usuário.<br><br>
+                    🌟 <strong>Destaques do projeto:</strong><br><br>
+                    - Botão "Agende Agora" que leva o cliente direto para o WhatsApp.<br>
+                    - Imagens clicáveis do Instagram e Facebook, redirecionando o cliente para as redes sociais do salão.<br>
+                    - Design responsivo e intuitivo.<br><br>
+                    Esse sistema torna o processo de pedido mais dinâmico e eficiente, otimizando o atendimento e melhorando a experiência dos clientes
+                </p> <br>
 
-            <!-- Projeto: Currículo -->
-            <h4>Curriculo</h4>
-            <p>
-                Nessa atividade é implementado um currículo utilizando uma estrutura básica de HTML5 e estilo CSS embutido. Ele inclui uma seção de cabeçalho com informações pessoais como nome, estado civil, idade, endereço, telefone e e-mail.<br>
-                A estilização é mínima, aplicando margens e preenchimentos uniformes a todos os elementos, garantindo uma apresentação limpa e organizada. Abaixo deixo o vídeo para melhor visualização:
-            </p>
-            <!-- Vídeo do projeto de currículo -->
-            <video src="videos/curriculo.mp4" controls class="videos"></video>
-            <hr>
-            <br>
+                <video src="videos/salao.mp4" controls class="videos" alt="Demonstração da pagina de salao">Salão de Beleza</video>
+                <br>
+            </div>
+        </section>
+    </main>
 
-            <!-- Projeto: Calculadora IMC -->
-            <h4>Calculadora IMC</h4>
-            <p>
-                Essa atividade combina estruturação de conteúdo (HTML), estilização (CSS) e comportamento dinâmico (JavaScript) para criar uma calculadora funcional de IMC em uma página web.
-            </p>
-            <!-- Vídeo da calculadora de IMC -->
-            <video src="videos/calculadoraimc.mp4" controls class="videos"></video>
-            <hr>
-            <br>
-
-            <!-- Projeto: Calculadora com operações básicas -->
-            <h4>Calculadora com operações básicas</h4> 
-            <p>Esse projeto implementa uma calculadora interativa usando HTML, CSS e JavaScript. A estrutura HTML define a interface da calculadora com botões numéricos e de operações, além de dois displays para mostrar a expressão e o resultado. O CSS estiliza a calculadora, centralizando-a na página e aplicando cores e estilos aos botões e displays. O JavaScript adiciona a funcionalidade da calculadora, permitindo a inserção de números e operações, limpando os displays e calculando o resultado da expressão matemática.</p>
-            <!-- Vídeo da calculadora com operações básicas -->
-            <video src="videos/calculadora.mp4" controls class="videos"></video>
-            <hr>
-            <br>
-
-            <!-- Projeto: Tela de cadastro -->
-            <h4>Tela de cadastro</h4>
-            <p>
-                Essa atividade cria uma aplicação de cadastro de Squads utilizando o Modelo de Objeto de Documento (DOM). A estrutura HTML define um formulário para inserir dados de Squad e uma tabela para listar Squads cadastradas. O CSS estiliza a página para garantir uma apresentação organizada e responsiva. O JavaScript adiciona interatividade ao formulário e à tabela: ele captura os dados inseridos no formulário, valida e adiciona novas linhas à tabela quando o formulário é submetido. Além disso, permite editar e excluir Squads existentes na tabela, mantendo uma interface dinâmica e funcional para gerenciar informações de Squads.
-            </p>
-            <!-- Vídeo da tela de cadastro -->
-            <video src="videos/cadastro.mp4" controls class="videos"></video> 
-        </div>
-    </section>
-
-    <!-- Seção de links para mais projetos -->
-    <section class="textos">
-        <h3>Para mais projetos acesse meu <a href="https://github.com/Anhaia09/Desenvolvimento_Web" target="_blank">GitHub <i class="bx bxl-github"></i></a></h3>
-    </section>
-
-    <!-- Rodapé da página -->
     <footer class="rodape">
         <h5>@Letícia Anhaia</h5>
     </footer>
 
-    <!-- Scripts JavaScript -->
-    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
