feat: added spacing between text and video of projects

--- a/cafeteria/index.html
+++ b/cafeteria/index.html
@@ -33,7 +33,7 @@
                     🌟 <strong>Destaques do projeto:</strong><br><br>
                     - Visual inspirado em cafeterias contemporâneas, criando uma experiência acolhedora.<br>
                     - Funcionalidade interativa em JavaScript: exibição dinâmica do endereço, tornando a navegação mais intuitiva.<br><br>
-                    Este projeto me permitiu reforçar conceitos essenciais de front-end enquanto criava uma interface agradável e funcional.
+                    Este projeto me permitiu reforçar conceitos essenciais de front-end enquanto criava uma interface agradável e funcional. <br><br>
                 </p>
 
                 <video src="videos/cafeteria.mp4" controls class="videos" alt="Demonstração da Landing Page da Cafeteria">Cafeteria</video>
