feat: updated icon link

--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
     <!-- Link para o arquivo CSS local -->
 
     <!-- link box icons -->
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/boxicons@latest/css/boxicons.min.css"
-    />
+    <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
     <!-- Link para ícones boxicons -->
 
     <!-- link remix icons -->
